package com.luxoft.bankapp;

public class BankApplication {
    public static void initialize() {

    }

    public static void modifyBank() {

    }

    public static void printBankReport() {

    }
}
